<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/black">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/table">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:id="@+id/one"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:id="@+id/two"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:id="@+id/three"
                android:layout_column="2"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/four"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/five"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/six"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/seven"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:textSize="70sp"
                android:shadowColor="#ffff0000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:background="@drawable/yellow_border"
                android:textColor="#ffff0000"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info"
        android:id="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/table"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/info">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ties"
                android:id="@+id/textView4"
                android:layout_column="0"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/tiesCount"
                android:layout_column="1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/human"
                android:id="@+id/PlayerOneText"
                android:layout_column="0"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/humanCount"
                android:layout_column="1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/android"
                android:id="@+id/PlayerTwoText"
                android:layout_column="0"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/androidCount"
                android:layout_column="1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
